--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Ignore the generated executable file
 sim
+__pycache__/
+sim_build/
+simv
+compiled_file.vvp
+results.xml
 
 # Ignore temporary and backup files
 *.o
 *.vcd
 *.log
 *~
-
-todo_Felipe.txt
-
