--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tools/compiler/riscv-gnu-toolchain"]
 	path = tools/compiler/riscv-gnu-toolchain
-	url = https://github.com/riscv/riscv-gnu-toolchain
+	url = https://github.com/riscv-collab/riscv-gnu-toolchain.git
